--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,10 @@
     keyserver: keyserver.ubuntu.com
     id: 9FD3B784BC1C6FC31A8A0A1C1655A0AB68576280
 
+- name: APT HTTPS support
+  apt:
+    name: apt-transport-https
+
 - name: Add Node Source APT repository
   apt_repository:
     repo: "deb https://deb.nodesource.com/node {{ ansible_distribution_release }} main"
