--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,17 +1,13 @@
 ---
-- name: Add Node Source signing key
+- name: Node Source package signing key
   apt_key:
     keyserver: keyserver.ubuntu.com
     id: 9FD3B784BC1C6FC31A8A0A1C1655A0AB68576280
-
-- name: APT HTTPS support
-  apt:
-    name: apt-transport-https
-
-- name: Add Node Source APT repository
+    
+- name: Node Source APT repository
   apt_repository:
     repo: "deb https://deb.nodesource.com/node {{ ansible_distribution_release }} main"
 
-- name: Install nodejs
+- name: Install Node.js
   apt:
     name: nodejs
