--- a/meta/main.yml
+++ b/meta/main.yml
@@ -23,4 +23,7 @@ galaxy_info:
   - development
   - system
   - web
-dependencies: []
+dependencies:
+  - role: willshersystems.apt
+    when: ansible_pkg_mgr == 'apt'
+
